wizard can add library roots